히스토리 탭에 달력 붙이기 성공. 탭 제스처를 통해 라벨에 날짜표시까지 함.

--- a/Bipeople/podfile
+++ b/Bipeople/podfile
@@ -3,7 +3,14 @@
 
 target 'Bipeople' do
   use_frameworks!
+  # Gamja
   pod 'GooglePlaces'
   pod 'GooglePlacePicker'
   pod 'GoogleMaps'
+
+  # BLU
+
+  # SJSJ
+  pod ‘FSCalendar’
+
 end
