--- a/Bipeople/Bipeople/Info.plist
+++ b/Bipeople/Bipeople/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>ko_KR</string>
 	<key>CFBundleDisplayName</key>
 	<string>Bipeople</string>
 	<key>CFBundleExecutable</key>
@@ -28,11 +28,12 @@
 		<true/>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>위치 권한 휙득 각 ㅇㅈ? ㅇㅇㅈ</string>
+	<string>Bipeople을 사용하기 위해서는 위치 권한 승인이 필요합니다</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>위치 권한 휙득 각 ㅇㅈ? ㅇㅇㅈ</string>
+	<string>Bipeople을 사용하기 위해서는 위치 권한 승인이 필요합니다</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
 	</array>
