--- a/Bipeople/Bipeople/Info.plist
+++ b/Bipeople/Bipeople/Info.plist
@@ -58,5 +58,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
